Fix external images
